--- a/styles.css
+++ b/styles.css
@@ -4,3 +4,43 @@
     flex-wrap: wrap;
     justify-content: center;
 }
+
+.new_book {
+    display: flex;
+    justify-content: center;
+}
+
+input:focus {
+    border-color: #000;
+}
+
+input {
+    /* To make sure that all text fields have the same font settings By default, textareas have a monospace font */
+    font: 1em sans-serif;
+    /* To give the same size to all text fields */
+    width: 300px;
+    box-sizing: border-box;
+    /* To harmonize the look & feel of text field border */
+    border: 1px solid #999;
+}
+
+label {
+    /* To make sure that all labels have the same size and are properly aligned */
+    display: inline-block;
+    width: 90px;
+    text-align: right;
+}
+
+.submit_button {
+    display: flex;
+    justify-content: center;
+    padding-left: 90px;
+}
+
+.submit_button button {
+    font: 1em sans-serif;
+}
+
+p .showDialog {
+    font: 1em sans-serif;
+}
